--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1px;
-  margin-left: -1px;
+  margin-left: 2px;
 }
 
 .how-it-works__title {
@@ -35,7 +35,7 @@
   line-height: 40px;
   margin: 0;
   margin-top: 19px;
-  margin-left: -1px;
+  margin-left: 2px;
   margin-bottom: 40px;
 }
 
@@ -101,11 +101,12 @@
     display: block;
     position: absolute;
     font-family: "Oswald", "Tahoma", sans-serif;
+    font-weight: 400;
     font-size: 280px;
     line-height: 280px;
     color: #f2f2f2;
     top: -321px;
-    left: 120px;
+    left: 114px;
     z-index: -1;
   }
 }
