--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -13,7 +13,7 @@
   font-style: normal;
   font-weight: 400;
   src: local("Lato"),
-    url("../fonts/lato/Lato-Regular.woff") format("woff"),
-    url("../fonts/lato/Lato-Regular.woff2") format("woff2");
+    url("../fonts/lato/Lato-Regular.woff2") format("woff2"),
+    url("../fonts/lato/Lato-Regular.woff") format("woff");
   font-display: swap;
 }
