--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "./blocks/fonts.less";
+@import "./fonts.less";
 @import "./blocks/main-header.less";
 @import "./blocks/container.less";
 @import "./blocks/promo.less";
@@ -16,6 +16,8 @@ body {
   font-family: "Lato", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 .visually-hidden {
