--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,7 +1,6 @@
 .main-footer {
   display: flex;
   flex-direction: column;
-  width: 320px;
   align-items: center;
 }
 
@@ -14,7 +13,7 @@
   margin: 0;
   padding: 0;
   margin-top: 40px;
-  margin-left: 67px;
+  margin-left: 75px;
 
   &::before {
     content: "";
@@ -56,13 +55,12 @@
     width: 280px;
     height: 1px;
     background-color: #d9d9d9;
-    top: -25px;
+    top: -21px;
   }
 }
 
 .main-footer__html-logo {
   fill: #666666;
-  margin-right: 8px;
 }
 
 .main-footer__html-link:hover .main-footer__html-logo {
@@ -78,9 +76,13 @@
   opacity: 0.3;
 }
 
+.main-footer__logo-image-cat {
+  width: 128px;
+}
+
 .main-footer__html-text {
   margin-top: 10px;
-  margin-left: -6px;
+  margin-left: 2px;
   letter-spacing: 1px;
 }
 
@@ -88,6 +90,11 @@
   width: 280px;
   height: 200px;
   margin-top: 39px;
+}
+
+.main-footer__map {
+  width: 100%;
+  height: 362px;
 }
 
 @media (min-width: @tablet-width) {
@@ -99,8 +106,8 @@
     margin-top: 0;
   }
 
-  .main-footer {
-    width: 768px;
+  .main-footer__logo-image-cat {
+    width: 143px;
   }
 
   .main-footer__logo {
@@ -130,19 +137,25 @@
 
   .main-footer__html-text {
     margin-top: 10px;
-    margin-right: 28px;
+    margin-right: 30px;
   }
 
   .main-footer__logo-image {
     margin-top: 1px;
-    margin-left: -7px;
-    margin-right: 24px;
+    margin-left: -2px;
+    margin-right: 20px;
+  }
+
+  .main-footer__map {
+    display: block;
+    border: none;
+    width: 100%;
+    height: 400px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .main-footer {
-    width: 1440px;
     position: relative;
   }
 
@@ -151,7 +164,7 @@
     width: 565px;
     height: 198px;
     top: 95px;
-    left: 102px;
+    left: 111px;
   }
 
   .main-footer__item {
